# bangumi-tool

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: cache.rs  cli.rs  client.rs  error.rs  export.rs  main.rs  models.rs
